# contact-form

./: .gitignore  Cargo.toml  README.md
deploy/: api_gateway.tf  dynamodb.tf  lambda.tf  lambda_role.tf  main.tf  s3.tf  tf-init.sh  variables.tf
src/: common.rs  handler.rs  main.rs
src/controller/: confirm_message.rs  create_message.rs  mod.rs
src/domain/: contact_details.rs  email.rs  mod.rs  serialization_error.rs
src/persistence/: mod.rs
src/persistence/contact_details/: implementation.rs  mod.rs  repository.rs
src/service/email/: implementation.rs  mod.rs
src/test/: handler_test.rs  mod.rs
