[package]
name = "contact_me"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.13.0"

tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
regex = "1.10.6"
aws-sdk-dynamodb = "1.45.0"
aws-config = "1.5.6"
uuid = { version = "1.10.0", features = ["v4"] }
async-trait = "0.1.82"
aws-sdk-sesv2 = "1.46.0"
anyhow = "1.0.89"
mail-builder = "0.3.2"
url = "2.5.2"
